--- a/Dataframetest.ipynb
+++ b/Dataframetest.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 183,
    "metadata": {
     "scrolled": true
    },
@@ -335,7 +335,8 @@
       "1  0\n",
       "2  0\n",
       "3  0\n",
-      "Rotated     0\n",
+      "Rotated\n",
+      "    0\n",
       "5   1\n",
       "6   2\n",
       "7   3\n",
@@ -357,10 +358,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e3e69a3988>]"
+       "[<matplotlib.lines.Line2D at 0x1e3e7a66e88>]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -398,9 +399,10 @@
     "b1 = b[0:4]\n",
     "b2 = b[5:]\n",
     "b2.append(b1, ignore_index=False, sort = True)\n",
-    "b2.reset_index()\n",
+    "b2.reset_index(drop=True)\n",
     "print(\"b1\",b1)\n",
-    "print (\"Rotated\",b2)\n",
+    "print (\"Rotated\")\n",
+    "print(b2)\n",
     "\n",
     "plt.figure()\n",
     "plt.plot(a, linewidth=3)\n",
